fix dropdown z-index

--- a/imports/plugins/included/default-theme/client/styles/select.less
+++ b/imports/plugins/included/default-theme/client/styles/select.less
@@ -25,3 +25,7 @@
   width: 44px;
   pointer-events: none;
 }
+
+.Select-menu-outer {
+  z-index: 9999;
+}
